# beta-computer-agent

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
apps/cli/: analyze_voice.py  build_mambo_voice_profile.py  check_gcp_multimodal.py  demo_mambo_styled_voice.py  demo_voice.py  import_character_assets.py  inspect_character_assets.py  inspect_voice_io.py  inspect_voice_pipeline.py  list_voice_profiles.py  speak.py
config/external-sources/: desktop-gremlin.md  uma-asset-viewer.md  uma-voice-dataset.md  uma-voice-models.md
docs/architecture/: agent-communication.md  character-asset-import-plan.md  character-assets.md  character-voice-pipeline.md  context-model.md  dependency-rules.md  mas-model.md  overview.md  state-ownership.md  voice-and-speech.md  voice-engine.md  voice-persona-analysis.md  voice-provider-types.md
docs/decisions/: 0001-modular-monolith.md  0002-real-agent-boundary.md  0003-unified-agent-communication.md  0004-context-and-memory-separation.md  0005-controlled-self-modification.md  0006-anti-coupling-rules.md
docs/guides/: approve-and-import-character-assets.md  local-character-asset-inspection.md
docs/policies/: memory-policy.md  safety-policy.md  skill-promotion-policy.md
docs/research/: character-source-reconnaissance.md  mambo-identity-resolution.md
profiles/characters/mambo/: CHARACTER.md  sources.md  voice-analysis.json  voice.yaml
profiles/voices/mambo/: VOICE.md
tests/integration/speech/: __init__.py  test_windows_tts.py
tests/unit/character_assets/: test_executor.py  test_identity.py  test_planner.py  (+2 more)
(+54 files in other folders)
